kubernetes/apps/adguardhome/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-dns
  labels:
    app: adguardhome
spec:
  type: ClusterIP
  selector:
    app: adguardhome
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
