kubernetes/apps/adguardhome/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-web
  labels:
    app: adguardhome
spec:
  type: ClusterIP
  selector:
    app: adguardhome
  ports:
    - name: http
      port: 3000
      targetPort: http
