kubernetes/apps/adguardhome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguardhome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: adguardhome-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - adguard.internal.lucawahlen.com
      secretName: adguardhome-tls
  rules:
    - host: adguard.internal.lucawahlen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguardhome-web
                port:
                  number: 3000
